# ceres-wallet-mpc

./: .gitignore  .pubignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_CN.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: ci.yml  precompile.yml
.planning/: MILESTONES.md  NEXT_SESSION.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md
.planning/phases/01-rust-bridge-skeleton/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-share-storage-and-dto-boundary/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-real-keygen-recovery/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-real-signing/: 04-01-PLAN.md  04-02-PLAN.md  04-CONTEXT.md  04-RESEARCH.md
.planning/phases/05-backup-and-rotation/: 05-01-PLAN.md  05-02-PLAN.md
.planning/phases/06-keygen-recovery/: 06-01-PLAN.md  06-02-PLAN.md  06-CONTEXT.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/07-dependency-replacement/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-VALIDATION.md
.planning/phases/08-wire-format/: 08-01-PLAN.md  08-02-PLAN.md  08-02-SUMMARY.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
android/: build.gradle  settings.gradle
doc/: SERVER_INTEGRATION.md  SERVER_INTEGRATION_CN.md
doc/architecture/: mpc_wallet_integration_plan.md
example/: README.md  pubspec.yaml
example/integration_test/: simple_test.dart
example/lib/: http_transport_example.dart  main.dart  mock_engine.dart  mock_transport.dart  ws_transport_example.dart
example/test/: widget_test.dart  ws_transport_test.dart
ios/: ceres_mpc.podspec  flutter_mpc_wallet.podspec
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: ceres_mpc.dart  flutter_mpc_wallet.dart
rust/: Cargo.toml  build.rs  cargokit.yaml
rust/.cargo/: config.toml
rust/src/: frb_generated.rs  lib.rs  relay.rs  runtime.rs  session.rs
rust/src/api/: address.rs  engine_ed25519.rs  mod.rs  mpc_engine.rs  session.rs  types.rs
rust/tests/: test_backup_export.rs  test_batch_collection.rs  test_dkg.rs  test_dsg.rs  test_rotation.rs
test/: ceres_mpc_test.dart  flutter_mpc_wallet_test.dart
test/bridge/: mpc_engine_test.dart
test/client/: mpc_client_test.dart
test/dto/: mpc_dtos_test.dart
(+52 files in other folders)
