[package]
name = "ceres_mpc"
version = "0.1.0"
edition = "2021"
build = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dkls23-ll = { git = "https://github.com/silence-laboratories/silent-shard-dkls23-ll", tag = "v1.1.4" }
tiny-keccak = { version = "2", features = ["keccak"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
ciborium = "0.2"
base64 = "0.22"
rand = "0.8"
once_cell = "1"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
