[package]
name = "ceres_mpc"
version = "0.1.1"
edition = "2021"
build = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sl-dkls23 = { version = "1.0.0-beta", features = ["test-support"] }
sl-mpc-mate = { version = "1.0.0-beta", features = ["simple-relay"] }
sl-oblivious = "=1.0.0-beta"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rand_chacha = "0.3"
tiny-keccak = { version = "2", features = ["keccak"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
ciborium = "0.2"
base64 = "0.22"
rand = "0.8"
once_cell = "1"
derivation-path = "0.2"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
